--- a/build.gradle
+++ b/build.gradle
@@ -223,7 +223,7 @@ dependencies {
 
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.3.RELEASE"
     implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.3.RELEASE"
-    implementation "org.springframework.boot:spring-boot-starter-cloud-connectors"
+    implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.8.RELEASE"
 
     implementation "org.springframework.security:spring-security-config:${spring_security_version}"
     implementation "org.springframework.security:spring-security-data:${spring_security_version}"
@@ -231,9 +231,9 @@ dependencies {
     implementation "org.springframework.security:spring-security-messaging:${spring_security_version}"
     implementation "org.springframework.security:spring-security-ldap:${spring_security_version}"
     implementation "org.xmlbeam:xmlprojector:1.4.16"
-    implementation "io.jsonwebtoken:jjwt-api:0.11.1"
-    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.1"
-    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.1"
+    implementation "io.jsonwebtoken:jjwt-api:0.11.2"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
     implementation ("io.springfox:springfox-swagger2") {
         exclude module: "mapstruct"
     }
