--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "webstomp-client": "1.2.6",
         "workbox-build": "^5.1.3",
         "workbox-sw": "^5.1.3",
+        "workbox-window": "^5.1.3",
         "yarn": "1.22.4",
         "zone.js": "0.10.3"
     },
