install service-worker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,8 @@
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "outDir": "build/resources/main/static/app",
-        "lib": ["es7", "dom"],
-        "typeRoots": [
-            "node_modules/@types"
-        ],
+        "lib": ["es7", "dom", "webworker.importscripts"],
+        "typeRoots": ["node_modules/@types"],
         "baseUrl": "./",
         "paths": {
             "app/*": ["src/main/webapp/app/*"]
@@ -29,15 +27,11 @@
     },
     "angularCompilerOptions": {
         "genDir": "build/resources/main/aot",
-        "skipMetadataEmit" : true,
+        "skipMetadataEmit": true,
         "fullTemplateTypeCheck": true,
         "strictTemplates": false,
         "preserveWhitespaces": true
     },
-    "include": [
-        "src/main/webapp/app"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["src/main/webapp/app"],
+    "exclude": ["node_modules"]
 }
