--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
         "tslib": "2.0.0",
         "tslint-no-unused-expression-chai": "0.1.4",
         "webstomp-client": "1.2.6",
+        "workbox-build": "^5.1.3",
+        "workbox-sw": "^5.1.3",
         "yarn": "1.22.4",
         "zone.js": "0.10.3"
     },
@@ -106,6 +108,7 @@
         "@types/sinon-chai": "3.2.4",
         "@types/smoothscroll-polyfill": "0.3.1",
         "@types/sockjs-client": "1.1.1",
+        "@types/workbox-sw": "^4.3.1",
         "@typescript-eslint/eslint-plugin": "3.1.0",
         "@typescript-eslint/eslint-plugin-tslint": "3.1.0",
         "@typescript-eslint/parser": "3.1.0",
@@ -130,6 +133,7 @@
         "friendly-errors-webpack-plugin": "1.7.0",
         "html-loader": "1.1.0",
         "html-webpack-plugin": "4.3.0",
+        "http-server": "^0.12.3",
         "husky": "4.2.5",
         "jasmine-core": "3.5.0",
         "jest-junit": "10.0.0",
@@ -191,6 +195,7 @@
         "start-tls": "yarn run webpack:dev --hot --env.tls",
         "serve": "yarn run start",
         "build": "yarn run webpack:prod",
+        "build:pwa:web": "webpack --config ./webpack/webpack.service-worker.js --progress --colors && node ./workbox-build-inject.js",
         "test": "jest --coverage --logHeapUsage -w=2 --config=src/test/javascript/jest.config.js --silent ",
         "test:e2e": "protractor src/test/javascript/protractor.conf.js",
         "test:server-api-tests": "`pwd`/src/test/k6/api_tests.sh",
