CSV parse + preview

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@ngx-translate/http-loader": "4.0.0",
         "@sentry/browser": "5.17.0",
         "@swimlane/ngx-datatable": "17.0.0",
+        "@types/papaparse": "^5.0.4",
         "ace-builds": "1.4.11",
         "angular-fittext": "2.1.1",
         "blob-util": "2.0.2",
@@ -67,6 +68,7 @@
         "ngx-moment": "4.0.1",
         "ngx-treeview": "6.0.2",
         "ngx-webstorage": "5.0.0",
+        "papaparse": "5.2.0",
         "rxjs": "6.5.5",
         "rxjs-compat": "6.5.5",
         "showdown": "1.9.1",
