--- a/build.gradle
+++ b/build.gradle
@@ -225,6 +225,12 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.3.RELEASE"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.8.RELEASE"
 
+    // https://docs.spring.io/spring/docs/4.3.15.RELEASE/spring-framework-reference/html/websocket.html#websocket-stomp-handle-broker-relay
+    implementation "io.netty:netty-all:4.1.49.Final"
+    implementation "io.projectreactor.netty:reactor-netty:0.9.7.RELEASE"
+    implementation "org.springframework:spring-messaging:5.2.7.RELEASE"
+    implementation "org.apache.servicemix.bundles:org.apache.servicemix.bundles.spring-messaging:5.2.6.RELEASE_1"
+
     implementation "org.springframework.security:spring-security-config:${spring_security_version}"
     implementation "org.springframework.security:spring-security-data:${spring_security_version}"
     implementation "org.springframework.security:spring-security-web:${spring_security_version}"
