--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
         "zone.js": "0.10.3"
     },
     "devDependencies": {
-        "@angular/cdk": "9.2.4",
+        "@angular/cdk": "^9.2.4",
         "@angular/cli": "9.1.9",
         "@angular/compiler-cli": "9.1.11",
         "@angular/language-service": "9.1.11",
