--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -139,7 +139,7 @@ spring:
             addresses: "" # Comma separated list of hosts and ports of the brokers (e.g. "localhost:61613,localhost:61614")
     hazelcast:
         interface: "" # The interface to bind to, if non is set, all interfaces will be bound
-        port: 5781 # The hazelcast port that this instance runs on and where other instances are expecte
+        port: 5701 # The hazelcast port that this instance runs on and where other instances are expected
         localInstances: false # Whether the other instances are expected locally (in dev mode) or external
 
 server:
