[Exam] Client: Fingerprint & Instance ID (#1688)

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "dompurify": "2.0.11",
         "eslint-plugin-chai-friendly": "0.6.0",
         "export-to-csv": "0.2.1",
+        "fingerprintjs2": "2.1.0",
         "franc-min": "5.0.0",
         "interactjs": "1.9.19",
         "jest": "26.0.1",
@@ -108,6 +109,7 @@
         "@types/sinon-chai": "3.2.4",
         "@types/smoothscroll-polyfill": "0.3.1",
         "@types/sockjs-client": "1.1.1",
+        "@types/uuid": "8.0.0",
         "@typescript-eslint/eslint-plugin": "3.4.0",
         "@typescript-eslint/eslint-plugin-tslint": "3.4.0",
         "@typescript-eslint/parser": "3.4.0",
