--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
         "@types/sinon-chai": "3.2.4",
         "@types/smoothscroll-polyfill": "0.3.1",
         "@types/sockjs-client": "1.1.1",
-        "@types/uuid": "^8.0.0",
+        "@types/uuid": "8.0.0",
         "@typescript-eslint/eslint-plugin": "3.4.0",
         "@typescript-eslint/eslint-plugin-tslint": "3.4.0",
         "@typescript-eslint/parser": "3.4.0",
