--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "artemis",
-    "version": "4.2.5",
+    "version": "4.2.6",
     "description": "Interactive Learning with Individual Feedback",
     "private": true,
     "license": "MIT",
@@ -13,24 +13,24 @@
         }
     },
     "dependencies": {
-        "@angular/animations": "10.0.0",
-        "@angular/common": "10.0.0",
-        "@angular/compiler": "10.0.0",
-        "@angular/core": "10.0.0",
-        "@angular/forms": "10.0.0",
-        "@angular/localize": "10.0.0",
-        "@angular/platform-browser": "10.0.0",
-        "@angular/platform-browser-dynamic": "10.0.0",
-        "@angular/router": "10.0.0",
+        "@angular/animations": "10.0.1",
+        "@angular/common": "10.0.1",
+        "@angular/compiler": "10.0.1",
+        "@angular/core": "10.0.1",
+        "@angular/forms": "10.0.1",
+        "@angular/localize": "10.0.1",
+        "@angular/platform-browser": "10.0.1",
+        "@angular/platform-browser-dynamic": "10.0.1",
+        "@angular/router": "10.0.1",
         "@fortawesome/angular-fontawesome": "0.6.1",
         "@fortawesome/fontawesome-svg-core": "1.2.29",
         "@fortawesome/free-regular-svg-icons": "5.13.1",
         "@fortawesome/free-solid-svg-icons": "5.13.1",
         "@ls1intum/apollon": "2.1.6",
         "@ng-bootstrap/ng-bootstrap": "6.1.0",
-        "@ngx-translate/core": "12.1.2",
-        "@ngx-translate/http-loader": "5.0.0",
-        "@sentry/browser": "5.18.0",
+        "@ngx-translate/core": "13.0.0",
+        "@ngx-translate/http-loader": "6.0.0",
+        "@sentry/browser": "5.18.1",
         "@swimlane/ngx-datatable": "17.0.0",
         "@types/papaparse": "5.0.4",
         "ace-builds": "1.4.11",
@@ -51,7 +51,7 @@
         "lodash.template": "4.5.0",
         "mobile-drag-drop": "2.3.0-rc.2",
         "moment": "2.27.0",
-        "ng-jhipster": "0.13.0",
+        "ng-jhipster": "0.14.0",
         "ng-pick-datetime": "7.0.0",
         "ng-starrating": "1.0.20",
         "ng2-ace-editor": "0.3.9",
@@ -87,8 +87,8 @@
     "devDependencies": {
         "@angular/cdk": "10.0.0",
         "@angular/cli": "10.0.0",
-        "@angular/compiler-cli": "10.0.0",
-        "@angular/language-service": "10.0.0",
+        "@angular/compiler-cli": "10.0.1",
+        "@angular/language-service": "10.0.1",
         "@ngtools/webpack": "10.0.0",
         "@types/ace": "0.0.43",
         "@types/chai": "4.2.11",
@@ -135,6 +135,7 @@
         "husky": "4.2.5",
         "jasmine-core": "3.5.0",
         "jest": "26.1.0",
+        "jest-date-mock": "1.0.8",
         "jest-junit": "11.0.1",
         "jest-preset-angular": "8.2.1",
         "lint-staged": "10.2.11",
