--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,19 @@ jobs:
 
   server-tests:
     runs-on: ubuntu-latest
+    services:
+      athene-segmentation:
+        image: ls1intum/athene-segmentation
+        ports: 
+          - 8000:8000
+      athene-embedding:
+        image: ls1intum/athene-embedding
+        ports: 
+          - 8001:8000
+      athene-clustering:
+        image: ls1intum/athene-clustering
+        ports: 
+          - 8002:8000
     steps:
     - name: Use Java 14
       uses: actions/setup-java@v1
