--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ on:
     - 'data/**'
     - '.github/**'
     - '!.github/workflows/build.yml'
+  release:
+    types:
+    - created
 
 env:
   CI: true
@@ -26,16 +29,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Create GitHub Release
-      if: startsWith(github.ref, 'refs/tags/')
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: v${{ github.ref }}
-        draft: true
     - name: Use Node.js 14
       uses: actions/setup-node@v1
       with:
@@ -69,12 +62,12 @@ jobs:
         name: Artemis.war
         path: build/libs/Artemis.war
     - name: Upload Release Artifact
-      if: startsWith(github.ref, 'refs/tags/')
+      if: github.event == 'release'
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{  github.event.release.upload_url }}
         asset_path: build/libs/Artemis.war
         asset_name: Artemis.war
         asset_content_type: application/x-webarchive
