--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,16 +37,16 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '14'
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Cache Gradle dependencies
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
         path: ~/.gradle/caches
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
     - name: Cache node modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
         path: node_modules
         key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
@@ -54,25 +54,24 @@ jobs:
           ${{ runner.os }}-node_modules-
     - name: Production Build
       run: ./gradlew -Pprod -Pwar clean bootWar
-    - name: Make .war file accessible
-      run: ln -s `ls build/libs/` ./build/libs/Artemis.war
     - name: Upload Artifact
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v2
       with:
         name: Artemis.war
-        path: build/libs/Artemis.war
+        path: build/libs/Artemis-*.war
     - name: Upload Release Artifact
-      if: github.event == 'release'
+      if: github.event_name == 'release' && github.event.action == 'created'
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{  github.event.release.upload_url }}
-        asset_path: build/libs/Artemis.war
+        asset_path: build/libs/Artemis-${{ github.event.release.tag_name }}.war
         asset_name: Artemis.war
         asset_content_type: application/x-webarchive
 
   server-tests:
+    if: github.event_name != 'release'
     runs-on: ubuntu-latest
     services:
       athene-segmentation:
@@ -92,9 +91,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '14'
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Cache Gradle dependencies
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
         path: ~/.gradle/caches
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
@@ -110,15 +109,16 @@ jobs:
       if: success() || failure()
 
   client-tests:
+    if: github.event_name != 'release'
     runs-on: ubuntu-latest
     steps:
     - name: Use Node.js 13
       uses: actions/setup-node@v1
       with:
         node-version: '14.x'
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Cache node modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
         path: node_modules
         key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
