--- a/build.gradle
+++ b/build.gradle
@@ -246,6 +246,7 @@ dependencies {
 
     implementation "org.zalando:problem-spring-web:0.25.2"
     implementation "com.ibm.icu:icu4j:67.1"
+    implementation 'com.github.seancfoley:ipaddress:5.3.1'
 
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct_version}"
     annotationProcessor "org.hibernate:hibernate-jpamodelgen:${hibernate_version}"
