--- a/src/test/resources/config/application-artemis.yml
+++ b/src/test/resources/config/application-artemis.yml
@@ -54,14 +54,14 @@ artemis:
         # Bamboo: The token value you use for the Server Notification Plugin
         # Jenkins: The token value you use for the Server Notification Plugin and is stored under the notification-token credential above
         artemis-authentication-token-value: secrettokenvalue
-    lti:
+    lti: # only important for online courses on the edX platform, can typically be ignored
         id: artemis_lti
         oauth-key: artemis_lti_key
-        oauth-secret: <secret>    # only important for online courses on the edX platform, can typically be ignored
-        user-prefix_edx: edx_
-        user-prefix_u4i: u4i_
-        user-group-name_edx: edx
-        user-group-name_u4i: u4i
+        oauth-secret: <secret>
+        user-prefix-edx: edx_
+        user-prefix-u4i: u4i_
+        user-group-name-edx: edx
+        user-group-name-u4i: u4i
     git:
         name: Artemis
         email: artemis@in.tum.de
