add zipping logic

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,6 +24,7 @@ logging:
 artemis:
     version: #project.version#
     file-upload-path: uploads
+    submission-export-path: exports
 
 management:
     endpoints:
