--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -7,6 +7,7 @@ logging:
 artemis:
     version: 1.3.3-beta7
     file-upload-path: uploads
+    submission-export-path: exports
 
 spring:
     application:
