Move Prometheus Configuration, only allow from specified IP.

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -142,6 +142,8 @@ spring:
         interface: "" # The interface to bind to, if non is set, all interfaces will be bound
         port: 5701 # The hazelcast port that this instance runs on and where other instances are expected
         localInstances: false # Whether the other instances are expected locally (in dev mode) or external
+    prometheus:
+        monitoringIp: "127.0.0.1" # Ip Address that is allowed to reach the prometheus management endpoint
 
 server:
     servlet:
