--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ task integrationTest(type: Test) {
 }
 
 check.dependsOn integrationTest
+
 task testReport(type: TestReport) {
     destinationDir = file("$buildDir/reports/tests")
     reportOn test
@@ -182,7 +183,7 @@ dependencies {
 
     implementation "io.github.jhipster:jhipster-framework"
     implementation "org.springframework.boot:spring-boot-starter-cache:${spring_boot_version}"
-    implementation "io.micrometer:micrometer-registry-prometheus:1.5.2"
+    implementation "io.micrometer:micrometer-registry-prometheus:1.5.3"
     implementation "net.logstash.logback:logstash-logback-encoder:6.4"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc:${fasterxml_version}"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${fasterxml_version}"
@@ -195,12 +196,12 @@ dependencies {
     implementation "javax.cache:cache-api:1.1.1"
     implementation "org.hibernate:hibernate-core"
     implementation "com.zaxxer:HikariCP:3.4.5"
-    implementation "org.apache.commons:commons-text:1.8"
+    implementation "org.apache.commons:commons-text:1.9"
     implementation "javax.transaction:javax.transaction-api:1.3"
     implementation "org.hibernate:hibernate-jcache"
     implementation "org.hibernate:hibernate-entitymanager"
     implementation "org.hibernate.validator:hibernate-validator:6.1.2.Final"
-    implementation "org.liquibase:liquibase-core:3.9.0"
+    implementation "org.liquibase:liquibase-core:${liquibase_hibernate5_version}"
     implementation "org.springframework.boot:spring-boot-loader-tools:${spring_boot_version}"
     implementation "org.springframework.boot:spring-boot-starter-mail:${spring_boot_version}"
     implementation "org.springframework.boot:spring-boot-starter-logging:${spring_boot_version}"
@@ -220,7 +221,7 @@ dependencies {
 
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.3.RELEASE"
     implementation "org.springframework.cloud:spring-cloud-starter-config:2.2.3.RELEASE"
-    implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.8.RELEASE"
+    implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.9.RELEASE"
 
     // https://docs.spring.io/spring/docs/4.3.15.RELEASE/spring-framework-reference/html/websocket.html#websocket-stomp-handle-broker-relay
     implementation "io.netty:netty-all:4.1.49.Final"
@@ -237,7 +238,7 @@ dependencies {
     implementation "io.jsonwebtoken:jjwt-api:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
-    implementation ("io.springfox:springfox-swagger2:2.10.5") {
+    implementation ("io.springfox:springfox-swagger2:3.0.0") {
         exclude module: "mapstruct"
     }
     implementation "io.springfox:springfox-bean-validators:3.0.0"
