--- a/src/main/resources/templates/java/test/projectTemplate/pom.xml
+++ b/src/main/resources/templates/java/test/projectTemplate/pom.xml
@@ -61,6 +61,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.2</version>
             </plugin>
+            %static-code-analysis-start%
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
@@ -70,6 +71,7 @@
                     <includeTests>false</includeTests>
                 </configuration>
             </plugin>
+            %static-code-analysis-stop%
         </plugins>
     </build>
 </project>
