--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,12 @@
         }
     },
     "rules": {
+        "prettier/prettier": [
+            "error",
+            {
+                "endOfLine":"auto"
+            }
+        ],
         "@typescript-eslint/tslint/config": [
             "error",
             {
