--- a/build.gradle
+++ b/build.gradle
@@ -165,6 +165,7 @@ dependencies {
     // the problem is that newer versions integrate the logging framework directly into the jar file instead of referencing
     // a dependency. This leads to 2 logging frameworks available at the same time.
     implementation files('libs/acli-9.0.0.jar')
+    implementation files('libs/jplag-2.12.1.jar')
 
     // https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
     implementation "org.eclipse.jgit:org.eclipse.jgit:5.8.1.202007141445-r"
