--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -62,7 +62,7 @@ spring:
         localInstances: true
 server:
     port: 8080
-    url: https://artemislocal.ase.in.tum.de
+    url: http://localhost:8080
 
 # ===================================================================
 # JHipster specific properties
