Report Java Test Coverage to Codacy

--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,12 @@ task integrationTestReport(type: TestReport) {
     reportOn integrationTest
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
 jacocoTestCoverageVerification {
     violationRules {
         rule {
