--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
     - name: Java Tests
-      run: ./gradlew executeTests
+      run: ./gradlew executeTests jacocoTestReport -x yarn_install -x webpack
+    - name: Run codacy-coverage-reporter
+      uses: codacy/codacy-coverage-reporter-action@master
+      with:
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: build/reports/jacoco/test/jacocoTestReport.xml
     - name: Java Code Style
       run: ./gradlew spotlessCheck
       if: success() || failure()
