--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{  github.event.release.upload_url }}
+        upload_url: ${{ github.event.release.upload_url }}
         asset_path: build/libs/Artemis-${{ github.event.release.tag_name }}.war
         asset_name: Artemis.war
         asset_content_type: application/x-webarchive
@@ -103,12 +103,13 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
     - name: Java Tests
-      run: ./gradlew executeTests jacocoTestReport -x yarn_install -x webpack
-    - name: Run codacy-coverage-reporter
+      run: ./gradlew --console=plain executeTests jacocoTestReport -x yarn_install -x webpack
+    - name: "Codacy: Report coverage"
       uses: codacy/codacy-coverage-reporter-action@master
       with:
         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
         coverage-reports: build/reports/jacoco/test/jacocoTestReport.xml
+      if: success() || failure()
     - name: Java Code Style
       run: ./gradlew spotlessCheck
       if: success() || failure()
@@ -135,7 +136,13 @@ jobs:
     - name: Install Dependencies
       run: yarn install
     - name: TypeScript Tests
-      run: yarn test
+      run: yarn test --ci
+    - name: "Codacy: Report coverage"
+      uses: codacy/codacy-coverage-reporter-action@master
+      with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: coverage/lcov.info
+      if: success() || failure()
     - name: TypeScript Formatting
       run: yarn prettier:check
       if: success() || failure()
