--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "rxjs-compat": "6.6.2",
         "showdown": "1.9.1",
         "showdown-katex": "0.6.0",
+        "simple-statistics": "7.1.0",
         "smoothscroll-polyfill": "0.4.4",
         "sockjs-client": "1.5.0",
         "sugar": "2.0.6",
