use switch expressions, update server dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,9 +23,9 @@ jaxb_runtime_version=2.3.2
 
 # gradle plugin version
 jib_plugin_version=2.0.0
-gradle_node_plugin_version=2.2.4
+gradle_node_plugin_version=3.0.0-rc2
 apt_plugin_version=0.21
 liquibase_plugin_version=2.0.2
 junit_version=5.6.2
-mockito_version=3.5.6
+mockito_version=3.5.7
 fasterxml_version=2.11.2
