--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,10 @@ spotless {
             exclude "**/src/main/java/de/tum/in/www1/artemis/service/connectors/BambooService.java", "**/src/main/java/de/tum/in/www1/artemis/config/SecurityConfiguration.java", "**/src/test/resources/test-data/repository-export/EncodingISO_8559_1.java", "**/node_modules/**", "**/out/**", "**/repos/**", "**/build/**", "**/src/main/generated/**", "**/src/main/resources/templates/**"
         }
         importOrderFile "artemis-spotless.importorder"
-        removeUnusedImports()
-
         eclipse().configFile "artemis-spotless-style.xml"
+
+        // the following command is not compatible with Java14 switch expressions
+//        removeUnusedImports()
     }
 }
 
@@ -332,7 +333,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "6.6"
+    gradleVersion = "6.6.1"
 }
 
 task stage(dependsOn: "bootWar") {
