--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ jaxb_runtime_version=2.3.2
 
 # gradle plugin version
 jib_plugin_version=2.0.0
-gradle_node_plugin_version=3.0.0-rc2
+gradle_node_plugin_version=2.2.4
 apt_plugin_version=0.21
 liquibase_plugin_version=2.0.2
 junit_version=5.6.2
