--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,7 +136,7 @@ jobs:
     - name: Install Dependencies
       run: yarn install
     - name: TypeScript Tests
-      run: yarn test --ci
+      run: yarn test:coverage --ci
     - name: "Codacy: Report coverage"
       uses: codacy/codacy-coverage-reporter-action@master
       with:
