Store student working directory in yml. Set it into the POM and use it to cut source paths for static code analysis

--- a/src/main/resources/config/application-artemis.yml
+++ b/src/main/resources/config/application-artemis.yml
@@ -5,6 +5,7 @@
 artemis:
     repo-clone-path: ./repos/
     repo-download-clone-path: ./repos-download/
+    programming-exercise-student-working-directory: /assignment/src
     encryption-password: <encrypt-password>     # arbitrary password for encrypting database values
     user-management:
         use-external: true
