--- a/src/main/resources/templates/java/test/projectTemplate/pom.xml
+++ b/src/main/resources/templates/java/test/projectTemplate/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
     </dependencies>
     <build>
-        <sourceDirectory>${project.basedir}/assignment/src</sourceDirectory>
+        <sourceDirectory>${project.basedir}${studentWorkingDirectory}</sourceDirectory>
         %non-sequential-start%
         <testSourceDirectory>${project.basedir}/test</testSourceDirectory>
         <testResources>
