--- a/src/main/resources/templates/staticCodeAnalysis/defaultConfigurationJava.json
+++ b/src/main/resources/templates/staticCodeAnalysis/defaultConfigurationJava.json
@@ -5,7 +5,7 @@
         "defaultState": "DEACTIVATED",
         "defaultPenalty": 1,
         "defaultMaxPenalty": 10,
-        "includedCategories": [
+        "categoryMappings": [
             {
                 "tool": "SPOTBUGS",
                 "category": "BAD_PRACTICE"
@@ -26,7 +26,7 @@
         "defaultState": "DEACTIVATED",
         "defaultPenalty": 0,
         "defaultMaxPenalty": 0,
-        "includedCategories": [
+        "categoryMappings": [
             {
                 "tool": "SPOTBUGS",
                 "category": "STYLE"
