GH Actions: Skip Codacy on Forks
Cannot report Coverage to Codacy for forks, as they do not have access to the token.

--- a/.github/workflows/pullrequest-reopened.yml
+++ b/.github/workflows/pullrequest-reopened.yml
@@ -1,6 +1,6 @@
 name: Pull Request Converted to draft
 on:
-  pull_request:
+  pull_request_target:
     types: [assigned, unassigned, labeled, unlabeled, opened, edited, closed, reopened, synchronize, locked, unlocked]
 
 jobs:
