--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,7 +109,7 @@ jobs:
       with:
         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
         coverage-reports: build/reports/jacoco/test/jacocoTestReport.xml
-      if: github.repository == 'ls1intum/Artemis' && (success() || failure())
+      if: (github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name) && (success() || failure())
     - name: Java Code Style
       run: ./gradlew spotlessCheck
       if: success() || failure()
@@ -142,7 +142,7 @@ jobs:
       with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: coverage/lcov.info
-      if: github.repository == 'ls1intum/Artemis' && (success() || failure())
+      if: (github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name) && (success() || failure())
     - name: TypeScript Formatting
       run: yarn prettier:check
       if: success() || failure()
