--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ jhipster_dependencies_version=3.9.0
 # The spring-boot version should match the one managed by
 # https://mvnrepository.com/artifact/io.github.jhipster/jhipster-dependencies/${jhipster_dependencies_version}
 spring_boot_version=2.3.3.RELEASE
-spring_security_version=5.3.4.RELEASE
+spring_security_version=5.4.0
 # The hibernate version should match the one managed by
 # https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
 hibernate_version=5.4.15.Final
@@ -26,6 +26,6 @@ jib_plugin_version=2.0.0
 gradle_node_plugin_version=2.2.4
 apt_plugin_version=0.21
 liquibase_plugin_version=2.0.2
-junit_version=5.6.2
-mockito_version=3.5.7
+junit_version=5.7.0
+mockito_version=3.5.10
 fasterxml_version=2.11.2
