fix issue with jacoco

--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,10 @@ task integrationTestReport(type: TestReport) {
     reportOn integrationTest
 }
 
+jacoco {
+    toolVersion = "0.8.6"
+}
+
 jacocoTestReport {
     reports {
         xml.enabled true
